feat: Implement async parallel processing for API calls